--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,1 @@
----
-import Layout from '@layouts/Layout.astro';
-import Introduction from '@sections/Introduction.astro';
----
-
-<Layout title="KevHec Frontend developer">
-  <Introduction />
-</Layout>
-
+<meta http-equiv="refresh" content="0;url=/en/" />
