--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -7,7 +7,7 @@
 @mixin sunflowerProps() {
   height: 200px;
   width: 180px;
-  background: url("/flower_spritesheet.png");
+  background: url("/images/flower_spritesheet.png");
   animation-name: sprite;
   animation-duration: 8s;
   animation-delay: 2s;
