--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,17 +4,26 @@ import type { HTMLAttributes } from 'astro/types';
 interface Props extends HTMLAttributes<'a'> {
   onlyIcon?: boolean,
   newTab?: boolean,
+  positionAware?: boolean
 }
 
-const { href, onlyIcon, newTab, ...attrs } = Astro.props;
+const {
+  href, onlyIcon, newTab, positionAware, ...attrs
+} = Astro.props;
 ---
 
 <a
   href={href}
   {...attrs}
-  class:list={["button", {'button--onlyIcon': onlyIcon}]}
-  target={newTab && "_blank" || "_self"}
-  rel={newTab && "noreferrer" || null}
+  class:list={[
+    'button',
+    {
+      'button--onlyIcon': onlyIcon,
+      'button--positionAware': positionAware,
+    },
+  ]}
+  target={newTab ? '_blank' : '_self'}
+  rel={newTab ? 'noreferrer' : null}
 >
   <span class="button__span" />
   <slot />
@@ -22,7 +31,7 @@ const { href, onlyIcon, newTab, ...attrs } = Astro.props;
 
 <style lang="scss">
   .button {
-    mask-position: relative;
+    position: relative;
     overflow: hidden;
 
     &:not(.button--onlyIcon) {
@@ -36,25 +45,90 @@ const { href, onlyIcon, newTab, ...attrs } = Astro.props;
       color: $primary-light-beige;
     }
 
+    &:hover {
+      span {
+        @include size(225%, calc(var(--button-width)*2.25))
+      }
+    }
+
     &__span {
       border-radius: 50%;
       position: absolute;
-      @include size(0);
+      top: var(--top);
+      left: var(--left);
       transform: translate(-50%, -50%);
+      @include size(0);
+      background-color: rgba(225, 230, 224, 0.2);
+      transition-property: width, height;
+      transition-duration: 0.4s, 0.4s;
+      transition-timing-function: ease-in-out, ease-in-out;
+      z-index: -1;
     }
   }
 </style>
 
 <script>
-  const buttons = document.querySelectorAll(".button");
+  const getButtonProps = (button: HTMLButtonElement) => {
+    const buttonRect = button.getBoundingClientRect();
 
-  buttons.forEach((button) => {
-    button.addEventListener("mouseenter", (evt) => {
-      console.log("in")
-    })
+    const scrollTop = window.scrollY || document.documentElement.scrollTop;
 
-    button.addEventListener("mouseleave", (evt) => {
-      console.log("out")
-    })
+    const yPos = buttonRect.top + scrollTop;
+    const xPos = buttonRect.left;
+    const width = button.offsetWidth;
+
+    return {
+      yPos,
+      xPos,
+      width,
+    };
+  };
+
+  const positionSpan = ({
+    span, mouseEvent, xPos, yPos,
+  }:{
+    span: HTMLSpanElement,
+    mouseEvent: MouseEvent,
+    xPos: number,
+    yPos: number,
+  }) => {
+    const { clientX, pageY } = mouseEvent;
+
+    const relX = clientX - xPos;
+    const relY = pageY - yPos;
+
+    span.style.setProperty('--top', `${relY}px`);
+    span.style.setProperty('--left', `${relX}px`);
+  };
+
+  const applyButtonsVariables = () => {
+    const buttons:
+      // eslint-disable-next-line no-undef
+      NodeListOf<HTMLButtonElement> = document.querySelectorAll('.button--positionAware');
+
+    buttons.forEach((button) => {
+      const { xPos, yPos, width } = getButtonProps(button);
+
+      button.style.setProperty('--button-width', `${width}px`);
+
+      const handleButtonEvent = (evt: MouseEvent) => {
+        const span = button.querySelector('span');
+        if (!span) return;
+        positionSpan({
+          span, mouseEvent: evt, xPos, yPos,
+        });
+      };
+      button.removeEventListener('mouseenter', handleButtonEvent);
+      button.removeEventListener('mouseleave', handleButtonEvent);
+
+      button.addEventListener('mouseenter', handleButtonEvent);
+      button.addEventListener('mouseleave', handleButtonEvent);
+    });
+  };
+
+  applyButtonsVariables();
+
+  window.addEventListener('resize', () => {
+    applyButtonsVariables();
   });
 </script>
