--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,6 +36,7 @@ const { title } = Astro.props;
     background: url(/images/background-noise.png), $primary-green;
     color: $primary-light-beige;
     overflow-x: hidden;
+    font-family: $quicksand;
   }
 
   .container {
