--- a/src/components/Typography.astro
+++ b/src/components/Typography.astro
@@ -96,4 +96,16 @@ const {
   .bold {
     font-weight: 700;
   }
+
+  .lora {
+    font-family: $lora;
+  }
+
+  .quicksand {
+    font-family: $quicksand;
+  }
+
+  .line-height-1 {
+    line-height: 1;
+  }
 </style>
