--- a/src/components/projectPage/Description.astro
+++ b/src/components/projectPage/Description.astro
@@ -20,15 +20,23 @@ interface Props {
       object-fit: cover;
     }
 
-    > img:first-child {
-      width: 100%;
-      max-width: 680px;
-      height: 100%;
-      aspect-ratio: 4 / 3;
-      flex: 0 0 min(680px, 100%);
+    picture {
+      width: fit-content;
+      height: fit-content;
+
+      @include mediaq($bp-small-pc) {
+        max-width: 60%;
+      }
     }
 
-    @include mediaq($bp-tablet) {
+    > picture:first-child img {
+      width: 100%;
+      aspect-ratio: 4 / 3;
+      flex: 0 0 min(680px, 100%);
+      margin-bottom: 1rem;
+    }
+
+    @include mediaq($bp-small-pc) {
       display: flex;
       gap: rem(32);
     }
@@ -36,12 +44,20 @@ interface Props {
     .evenColumns {
       flex: 1;
 
+      > *:first-child {
+        margin-bottom: 1.5rem;
+
+        @include mediaq($bp-tablet) {
+          margin-bottom: 0;
+        }
+      }
+
       @include mediaq($bp-tablet) {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
         column-gap: rem(16);
       }
-  
+
       > * {
         display: flex;
         flex-direction: column;
