--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,7 @@ const { title } = Astro.props;
     color: $primary-light-beige;
     overflow-x: hidden;
     font-family: $quicksand;
+    padding-bottom: rem(32);
   }
 
   .container {
