--- a/src/pages/[lang]/project/[slug].astro
+++ b/src/pages/[lang]/project/[slug].astro
@@ -1,9 +1,14 @@
 ---
+import Layout from '@layouts/Layout.astro';
+import Button from '@components/Button.astro';
 import Container from '@components/Container.astro';
 import Typography from '@components/Typography.astro';
-import Layout from '@layouts/Layout.astro';
-import { Image } from 'astro:assets';
+import GoBackArrow from '@components/icons/GoBackArrow.astro';
 import { getCollection } from 'astro:content';
+import { getLangFromUrl, useTranslations } from '@i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 
 export async function getStaticPaths() {
   const pages = await getCollection('projects');
@@ -28,7 +33,56 @@ const { Content } = await page.render();
 ---
 <Layout title={page.data.title}>
   <Container>
-    <Typography as='h1'>{page.data.title}</Typography>
-    <Content />
+    <div class="project__innerContainer">
+      <div class="project__header">
+        <Button as="a" iconOnly href={`/${lang}/`} class="project__goBack">
+          <figure aria-hidden="true">
+            <GoBackArrow />  
+          </figure>
+          <span class="visually-hidden">{t("project.goBack")}</span>
+        </Button>
+        <Typography as='h1' class="project__heading">
+          {page.data.projectName}
+        </Typography>
+      </div>
+      <Content />
+    </div>
   </Container>
 </Layout>
+
+<style lang="scss">
+
+  .project {
+    &__header {
+      display: flex;
+      position: relative;
+      margin: 3rem 0 2rem;
+    }
+
+    &__heading {
+      display: inline-block;
+      font-size: rem(36);
+      text-align: center;
+      position: absolute;
+      line-height: 1;
+      width: 100%;
+      left: 0;
+      z-index: -1;
+
+      @include mediaq($bp-tablet) {
+        font-size: rem(48)
+      }
+    }
+
+    &__goBack {
+      display: inline-block;
+      width: fit-content;
+      height: fit-content;
+
+      @include mediaq($bp-tablet) {
+        display: block;
+        margin-bottom: 32px;
+      }
+    }
+  }
+</style>
