--- a/src/components/projectPage/Gallery.astro
+++ b/src/components/projectPage/Gallery.astro
@@ -20,7 +20,7 @@
       grid-template-columns: repeat(2, 1fr);
       grid-auto-rows: 400px;
 
-      :last-child {
+      > :nth-child(2n-1):last-child {
         grid-column: span 2;
         grid-row: span 2;
       }
