[SEO] Sitemap and minimal conf

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -5,7 +5,7 @@ import Introduction from '@sections/Introduction.astro';
 import Projects from '@sections/Projects.astro';
 ---
 
-<Layout title="KevHec - Frontend developer">
+<Layout title="KevHec - Frontend developer" lang='en'>
   <Introduction />
   <About />
   <Projects />
