--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -5,7 +5,7 @@ import Introduction from '@sections/Introduction.astro';
 import Projects from '@sections/Projects.astro';
 ---
 
-<Layout title="KevHec - Desarrollador frontend">
+<Layout title="KevHec - Desarrollador frontend" lang="es">
   <Introduction />
   <About />
   <Projects />
