--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,23 +1,33 @@
 ---
 import Container from '@components/Container.astro';
 import LanguagePicker from '@components/LanguagePicker.astro';
+import { SEO } from 'astro-seo';
+import { getLangFromUrl, useTranslations } from '@i18n/utils';
 
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
 	<head>
+    <SEO
+      title={t('SEO.title')}
+      description={t('SEO.description')}
+      extend={{
+        link: [
+          {rel: "icon", href:"/favicon.ico", sizes: "any"},
+          {rel: "icon", href:"/favicon.svg", type: "image/svg+xml"},
+          {rel: "apple-touch-icon", href: "/apple-touch-icon.png" }
+        ],
+        meta: [
+          {name: "theme-color", content: "#214537"}
+        ]
+      }}
+    />
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
     <slot name="additional-meta-head-info" />
 	</head>
 	<body>
