--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,25 +14,22 @@ const t = useTranslations(lang);
     <SEO
       title={t('SEO.title')}
       description={t('SEO.description')}
-      extend={{
-        link: [
-          {rel: "icon", href:"/favicon.ico", sizes: "any"},
-          {rel: "icon", href:"/favicon.svg", type: "image/svg+xml"},
-          {rel: "apple-touch-icon", href: "/apple-touch-icon.png" }
-        ],
-        meta: [
-          {name: "theme-color", content: "#214537"}
-        ]
+      twitter={{
+        creator: '@Kev_Hec'
       }}
     />
 		<meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <meta name="theme-color" content="#214537">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
     <slot name="additional-meta-head-info" />
 	</head>
 	<body>
     <header>
-      <Container>
+      <Container noPadded>
         <div class="languagepicker">
           <LanguagePicker />
         </div>
