--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -1,9 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
-import { Image } from 'astro:assets'
 import { getLangFromUrl, useTranslations } from '@i18n/utils'
 import _slug_ from 'src/pages/[lang]/project/[slug].astro';
-import CustomImage from '@components/CustomImage.astro';
 import Container from '@components/Container.astro';
 import Typography from '@components/Typography.astro';
 import ProjectCard from '@components/ProjectCard.astro';
@@ -25,25 +23,13 @@ const projects = await getCollection('projects', ({ slug }) => {
       {
         projects.map((project) => (
           <li>
-            <div>
-              <CustomImage
-                mobileImgUrl={project.data.mockup}
-                desktopImgUrl={project.data.mockup}
-                alt={project.data.mockupAlt}
-              />
-              <Typography as="h3" class="projectCard__heading">
-                {project.data.projectName}
-              </Typography>
-              <Typography as="p" class="projectCard__excerpt">
-                {project.data.excerpt}
-              </Typography>
-              <a
-                href={`/${pageLang}/project/${project.slug.split('/').slice(1)}`}
-                class="projectCard__link"
-              >
-                {t("projects.seeProjectLabel")}
-              </a>
-            </div>
+            <ProjectCard
+              mockup={project.data.mockup}
+              mockupAlt={project.data.mockupAlt}
+              projectName={project.data.projectName}
+              excerpt={project.data.excerpt}
+              projectHref={`/${pageLang}/project/${project.slug.split('/').slice(1)}`}
+            />
           </li>
         ))
       }
