[CHANGE] Project Header outside mdx file, png to webp

--- a/src/components/Typography.astro
+++ b/src/components/Typography.astro
@@ -78,7 +78,7 @@ const {
   /* Utility typography classes */
 
   .accent {
-    color: $accents-gray;
+    color: $accents-color;
   }
 
   .regular {
