--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,7 +5,7 @@ $primary-light-beige: #F5F5DC;
 $neutral-white: #E1E6E0;
 $neutral-gray: #49474C;
 
-$accents-gray: #A8A8A8;
+$accents-color: #B3A992;
 
 // Fonts
 $lora: 'Lora', serif;
