--- a/src/pages/[lang]/project/[slug].astro
+++ b/src/pages/[lang]/project/[slug].astro
@@ -6,6 +6,8 @@ import Typography from '@components/Typography.astro';
 import GoBackArrow from '@components/icons/GoBackArrow.astro';
 import { getCollection } from 'astro:content';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import { Image } from 'astro:assets';
+import ProjectHeader from '@components/projectPage/ProjectHeader.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -27,62 +29,19 @@ export async function getStaticPaths() {
   return paths;
 }
 
-const page = Astro.props;
+const project = Astro.props;
 
-const { Content } = await page.render();
+const { Content } = await project.render();
 ---
-<Layout title={page.data.title}>
+<Layout title={project.data.title}>
   <Container>
-    <div class="project__innerContainer">
-      <div class="project__header">
-        <Button as="a" iconOnly href={`/${lang}/`} class="project__goBack">
-          <figure aria-hidden="true">
-            <GoBackArrow />  
-          </figure>
-          <span class="visually-hidden">{t("project.goBack")}</span>
-        </Button>
-        <Typography as='h1' class="project__heading">
-          {page.data.projectName}
-        </Typography>
-      </div>
+    <main class="project__innerContainer">
+      <ProjectHeader
+        project={project}
+        lang={lang}
+        goBackLabel={t("project.goBack")}
+      />
       <Content />
-    </div>
+    </main>
   </Container>
 </Layout>
-
-<style lang="scss">
-
-  .project {
-    &__header {
-      display: flex;
-      position: relative;
-      margin: 3rem 0 2rem;
-    }
-
-    &__heading {
-      display: inline-block;
-      font-size: rem(36);
-      text-align: center;
-      position: absolute;
-      line-height: 1;
-      width: 100%;
-      left: 0;
-      z-index: -1;
-
-      @include mediaq($bp-tablet) {
-        font-size: rem(48)
-      }
-    }
-
-    &__goBack {
-      display: inline-block;
-      width: fit-content;
-      height: fit-content;
-
-      @include mediaq($bp-tablet) {
-        display: block;
-        margin-bottom: 32px;
-      }
-    }
-  }
-</style>
