--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -3,10 +3,12 @@ import Layout from '@layouts/Layout.astro';
 import About from '@sections/About.astro';
 import Introduction from '@sections/Introduction.astro';
 import Projects from '@sections/Projects.astro';
+import Technologies from '@sections/Technologies.astro';
 ---
 
 <Layout title="KevHec - Desarrollador frontend" lang="es">
   <Introduction />
   <About />
   <Projects />
+  <Technologies />
 </Layout>
