--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -33,3 +33,11 @@
 	width: $width;
 	height: $height;
 }
+
+@mixin animate($name, $duration, $delay, $timingFunction, $fillMode) {
+  animation-name: $name;
+  animation-duration: $duration;
+  animation-timing-function: $timingFunction;
+  animation-delay: $delay;
+  animation-fill-mode: $fillMode;
+}
