--- a/src/sections/Technologies.astro
+++ b/src/sections/Technologies.astro
@@ -46,7 +46,7 @@ const techs: TechsList[] = ['JavaScript', 'TypeScript', 'React', 'Next.js', 'Tai
       margin-inline: auto;
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-around;
       gap: 1rem;
     }
   }
