--- a/src/components/Sunflower.astro
+++ b/src/components/Sunflower.astro
@@ -1,5 +1,6 @@
 ---
 import AnimatedWithFallback from '@components/AnimatedWithFallback.astro'
+const { classes } = Astro.props;
 ---
 
 <AnimatedWithFallback
@@ -11,4 +12,5 @@ import AnimatedWithFallback from '@components/AnimatedWithFallback.astro'
   frameCount={40}
   animationDuration="8s"
   easeIn
+  classes={classes}
 />
