--- a/src/components/projectPage/GoBackArrow.astro
+++ b/src/components/projectPage/GoBackArrow.astro
@@ -16,14 +16,16 @@ import AnimatedWithFallback from '@components/AnimatedWithFallback.astro'
 
 <style lang="scss" is:inline>
   .backArrow {
+    --finalStateLeftOffset: 27px;
+    
     > * {
       transition: all 200ms ease-in;
-
+      transform: translateX(calc(-1 * var(--finalStateLeftOffset)));
     }
     &:hover {
       > * {
         filter: brightness(2) drop-shadow(0px 0px 10px rgba(245, 245, 220, 0.4));
-        transform: translateX(-10px);
+        transform: translateX(calc(-1 * var(--finalStateLeftOffset) - 10px));
       }
     }
   }
